--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <script id="snow-config" type="application/json">
   {
-    "basename": "/",
+    "basename": "/snow/",
     "locale": "en"
   }
 </script>
